# proceduralAnimation

./: .gitignore  CMakeLists.txt  TODO
src/: main.c
